// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MatchScore: 스냅샷 > className 추가 시 스냅샷 1`] = `
<span
  class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 custom-extra"
>
  <span
    class="w-1.5 h-1.5 rounded-full bg-emerald-400"
  />
  적합도 높음
</span>
`;

exports[`MatchScore: 스냅샷 > high 등급 스냅샷 1`] = `
<span
  class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 "
>
  <span
    class="w-1.5 h-1.5 rounded-full bg-emerald-400"
  />
  적합도 높음
</span>
`;

exports[`MatchScore: 스냅샷 > low 등급 스냅샷 1`] = `
<span
  class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-gray-500/10 text-gray-400 border-gray-500/20 flex items-center gap-1.5 "
>
  <span
    class="w-1.5 h-1.5 rounded-full bg-gray-400"
  />
  참고
</span>
`;

exports[`MatchScore: 스냅샷 > medium 등급 스냅샷 1`] = `
<span
  class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-amber-500/10 text-amber-400 border-amber-500/20 flex items-center gap-1.5 "
>
  <span
    class="w-1.5 h-1.5 rounded-full bg-amber-400"
  />
  검토 가능
</span>
`;
